--- a/_posts/2024-01-22-intro.md
+++ b/_posts/2024-01-22-intro.md
@@ -3,9 +3,9 @@ layout: post
 title: "Class 1 - Intro to Tiny Computing"
 ---
 
-![Mainframe computer](/assets/img/hskcomp.jpg)
+![Mainframe computer]({{ site.baseurl }}/assets/img/hskcomp.jpg)
 
-![Raspberry Pi computer](/assets/img/diy-computing.jpg)
+![Raspberry Pi computer]({{ site.baseurl }}/assets/img/diy-computing.jpg)
 
 ## Guiding Questions
 
@@ -21,15 +21,15 @@ title: "Class 1 - Intro to Tiny Computing"
 
 * What is a computer?
 
-![Thinkpad laptop](/assets/img/laptop.jpg)
+![Thinkpad laptop]({{ site.baseurl }}/assets/img/laptop.jpg)
 
-![iphone smartphone](/assets/img/phone.jpg)
+![iphone smartphone]({{ site.baseurl }}/assets/img/phone.jpg)
 
-![Survival Research Laboratories robot](/assets/img/srl.jpg)
+![Survival Research Laboratories robot]({{ site.baseurl }}/assets/img/srl.jpg)
 
-![One Laptop Per Child computer](/assets/img/olpc.jpg)
+![One Laptop Per Child computer]({{ site.baseurl }}/assets/img/olpc.jpg)
 
-![Uber self-driving car](/assets/img/uber.jpg)
+![Uber self-driving car]({{ site.baseurl }}/assets/img/uber.jpg)
 
 ## Background: history of computers
 
@@ -55,7 +55,7 @@ title: "Class 1 - Intro to Tiny Computing"
 
 Piratebox or Offline Digital Library
 
-![pbx30](/assets/img/pbx30.gif)
+![pbx30]({{ site.baseurl }}/assets/img/pbx30.gif)
 
 [Piratebox site](https://piratebox.cc/start)
 
