updated after class notes

--- a/_posts/2024-01-21-syllabus.md
+++ b/_posts/2024-01-21-syllabus.md
@@ -105,10 +105,10 @@ Learning programming is a cumulative effort. Each class builds on what you have 
 
 * Submit your work on time for full credit.
 * To receive an extension, consult with the instructor.
-* All completed game projects will have deliverables. At minimum, you will need to turn in a game file along with a document with the title, game description, link to media online, and screenshots. There may be other requirements as well. 
+* All completed projects will have deliverables. At minimum, you will need to turn in a document with the title, project description, images and/or screenshots. There may be other requirements as well. 
 * Smaller homework projects lead up to completion of larger projects.
 
-Students are expected to be self-directed. This is a 4 credit class significant outside class homework expected.
+Students are expected to be self-directed. This is a 4 credit class with significant outside class homework expected, often started during our class time.
 
 This class will require some collaboration.
 
