--- a/_posts/2024-01-22-intro.md
+++ b/_posts/2024-01-22-intro.md
@@ -59,8 +59,18 @@ Piratebox or Offline Digital Library
 
 [Piratebox site](https://piratebox.cc/start)
 
-# Homework:
+## Homework:
 
 1. Install the Raspbian operating system on your Raspberry Pi. Boot it up. Configure networking. Open a web browser and access a website.
 2. Writing assignment: Write a paragraph or two about your goals for the course. Why did you sign up for the class? What are you interested in learning? What are you confused about? What are you excited about? These are just example questions. Feel free to touch on other topics.
 3. Reading and writing assignment: Read Alan Kay's 1968 paper [A Personal Computer For Children of All Ages](http://www.vpri.org/pdf/hc_pers_comp_for_children.pdf) where he proposes a Dynabook. After reading, consider the present state of our personal laptops, tablets and phones. In a few paragraphs describe in what ways we have realized or failed to achieve Kay's vision.
+
+## Research
+
+Spend some time looking into the answers to these questions I posed in week 1 class. Save some links and notes in a useful place where you can access them later. Jot down questions you have. You don't need to "turn this in" as a writing assignment, but this info will help you succeed in the first couple weeks of the course, and you will likely reference these notes several times. They may have several different solutions.&nbsp;
+
+* how to make the terminal font larger on Raspberry Pi OS (hint: you're probably using the default xterm terminal program)
+* how to set the clock and date
+* how to connect to the internet (there are multiple possible ways)
+* what is **ssh**? how do you ssh into your Raspberry Pi from your personal computer?
+* how to download new software for your Pi? (look into the command line program **apt**)
